--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.0",
+    "timeago.js": "^4.0.2",
     "typescript": "~3.7.2"
   },
   "scripts": {
