--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/styled-components": "^5.1.3",
+    "moment": "^2.28.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.0",
-    "timeago.js": "^4.0.2",
     "typescript": "~3.7.2"
   },
   "scripts": {
