--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/styled-components": "^5.1.3",
+    "material-ui-popup-state": "^1.6.1",
     "moment": "^2.28.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
