Convert rAthenaImport to typescript and add convenience script for running import

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "import": "ts-node --project ./dev/tsconfig.json ./dev/rAthenaImport/index.ts"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "prettier": "2.1.1"
+    "prettier": "2.1.1",
+    "ts-node": "^9.0.0"
   }
 }
