--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/prettier": "2.1.1",
     "prettier": "2.1.1",
     "strip-comments": "^2.0.1",
     "ts-node": "^9.0.0"
