--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,9 +17,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react-jsx",
+    "noFallthroughCasesInSwitch": true
   },
   "include": [
-    "src", "types"
+    "src",
+    "types"
   ]
 }
